Revert "edit text"
This reverts commit cfe6d332c4971e15d262d5a86e0786dc0d63d300.

--- a/TT.9.25.18/cleveland.dotplot.Rmd
+++ b/TT.9.25.18/cleveland.dotplot.Rmd
@@ -248,8 +248,7 @@ ggplot(plotdf) +
   geom_text(data = plotdf %>%
     filter(variable == "OTt"), aes(x = value, y = Country, label = value), hjust = -.25) +
   xlim(-0.15,1.15) +
-  scale_color_manual(values = c("#da532c", "#9f00a7"),
-    labels = c("Overall Invasion Threat (OTt)", "Invasion Cost (TICt) as a Proportion of GDP")) +
+  scale_color_manual(values = c("#da532c", "#9f00a7"), labels = c("Overall Invasion Threat (OTt)", "Invasion Cost (TICt) as a Proportion of GDP")) +
   guides(colour = guide_legend(override.aes = list(size=3))) +
   theme(legend.position = "bottom",
     legend.title = element_blank(),
