Revert "update text to match pull request changes"
This reverts commit f37e0a66fed1edc0e101a09c84f0598d9f7135d2.

--- a/TT.9.25.18/cleveland.dotplot.Rmd
+++ b/TT.9.25.18/cleveland.dotplot.Rmd
@@ -153,7 +153,7 @@ final_list <- rbind(tbl1_10, tbl3_10) %>%
 
 Last of all, we're going to combine our two data frames (table1_df & table3_df) so we can start making our plot. First, we use full_join() to combine the tables. Then we use filter() to keep only the countries in our final list. We can use "%in%" to select only the countries that appear in our list.
 
-We're also going to go ahead & drop our rank columns because we won't be needing them for the final plot. Finally, we're going to use gather() to make our data frame "longer" & easier to plot.
+We're also going to go ahead & drop our rank columns because we won't be needing them for the final plot. Finally, we're going to melt the data frame to make it easier to plot.
 
 ```{r}
 
@@ -174,7 +174,7 @@ ggplot(plotdf) +
   geom_point(aes(x = value, y = Country, color = variable))
 ```
 
-Looks good so far! First, let's change up the colors & make the points bigger. We can use "size =" in our geom_point() call to change the size of our dots. Make sure to put it outside of the aes() call.
+Looks good so far! First, let's change up the colors & make the points bigger
 
 ```{r}
 
@@ -216,7 +216,7 @@ ggplot(plotdf) +
     panel.background = element_blank())
 ```
 
-I like the labels but we can't see some of them! We can widen the x-axis to fix this issue. I used xlim() to change the limits on the x-axis. I added 0.15 in each direction to make enough room for the labels.
+I like the labels but we can't see some of them! We can widen the x-axis to fix this issue. I used xlim() to change the limits on the x-axis. I added 0.1 in each direction to make enough room for the labels.
 
 I also bumped up the font size on the y-axis labels. I did this using "axis.text.y" in the theme() call.
 
@@ -228,7 +228,7 @@ ggplot(plotdf) +
     filter(variable == "TICt"), aes(x = value, y = Country, label = value), hjust = 1.25) +
   geom_text(data = plotdf %>%
     filter(variable == "OTt"), aes(x = value, y = Country, label = value), hjust = -.25) +
-  xlim(-0.15,1.15) +
+  xlim(-0.1,1.1) +
   scale_color_manual(values = c("#da532c", "#9f00a7")) +
   theme(axis.title = element_blank(),
     axis.ticks = element_blank(),
@@ -237,7 +237,7 @@ ggplot(plotdf) +
     axis.text.y = element_text(size = 15))
 ```
 
-Last thing I want to fix is the legend. First I want to move the legend to the bottom of the plot. This can be done inside the theme() call using legend.position = "bottom". I removed the legend title using "legend.title". I changed the labels for the legend inside the scale_color_manual() call. I changed the dot size inside the guides() call.
+Last thing I want to fix is the legend. First I want to move the legend to the bottom of the plot. This can be done inside the theme() call using legend.position = "bottom". I removed the legend title using "legend.title". Then I removed the size legend using scale_size(). I changed the labels for the legend inside the scale_color_manual() call. I changed the dot size inside the guides() call.
 
 ```{r}
 ggplot(plotdf) +
@@ -247,7 +247,7 @@ ggplot(plotdf) +
     filter(variable == "TICt"), aes(x = value, y = Country, label = value), hjust = 1.25) +
   geom_text(data = plotdf %>%
     filter(variable == "OTt"), aes(x = value, y = Country, label = value), hjust = -.25) +
-  xlim(-0.15,1.15) +
+  xlim(-0.1,1.1) +
   scale_color_manual(values = c("#da532c", "#9f00a7"), labels = c("Overall Invasion Threat (OTt)", "Invasion Cost (TICt) as a Proportion of GDP")) +
   guides(colour = guide_legend(override.aes = list(size=3))) +
   theme(legend.position = "bottom",
@@ -260,5 +260,3 @@ ggplot(plotdf) +
 ```
 
 Looks great! If you have any questions or comments, feel feel to get in touch with me via [Twitter](https://twitter.com/sapo83).
-
-Thanks to [othonamtegazza](https://github.com/othomantegazza) for the excellent feedback!
