--- a/2020/TT.20200107/20200107.md
+++ b/2020/TT.20200107/20200107.md
@@ -1,8 +1,72 @@
 
 ### \#TidyTuesday 01-07-2020 Week 2
 
-``` bash
-curl -o rainfall.csv https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-01-07/rainfall.csv
+\#`{bash, results = "hide"} #curl -o rainfall.csv
+https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-01-07/rainfall.csv
+# #curl -o temperature.csv
+https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-01-07/temperature.csv
+#`
 
-curl -o temperature.csv https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-01-07/temperature.csv
+``` r
+library(tidyverse)
+library(viridis)
+
+rainfall <- readr::read_csv("rainfall.csv")
 ```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   station_code = col_character(),
+    ##   city_name = col_character(),
+    ##   year = col_double(),
+    ##   month = col_character(),
+    ##   day = col_character(),
+    ##   rainfall = col_double(),
+    ##   period = col_double(),
+    ##   quality = col_character(),
+    ##   lat = col_double(),
+    ##   long = col_double(),
+    ##   station_name = col_character()
+    ## )
+
+``` r
+city_year_totals <- rainfall %>%
+  select(city_name, year, rainfall) %>%
+  replace_na(list(rainfall = 0)) %>%
+  group_by(city_name, year) %>%
+  summarise(total = sum(rainfall)) %>%
+  filter(year %in% 2007:2020)
+
+head(city_year_totals)
+```
+
+    ## # A tibble: 6 x 3
+    ## # Groups:   city_name [1]
+    ##   city_name  year total
+    ##   <chr>     <dbl> <dbl>
+    ## 1 Adelaide   2007  459.
+    ## 2 Adelaide   2008  364.
+    ## 3 Adelaide   2009  486.
+    ## 4 Adelaide   2010  541.
+    ## 5 Adelaide   2011  462.
+    ## 6 Adelaide   2012  486
+
+``` r
+ggplot(data = city_year_totals) +
+  geom_col(aes(x = as.factor(year), y = total, color = as.factor(year), fill = as.factor(year))) +
+  facet_wrap(~ city_name) +
+#  scale_x_discrete(limits = 2007:2020, name = " ") +
+  xlab("Year") +
+  ylab("Total Rainfall (mm)") +
+  theme(strip.text.x = element_text(size = 12, color = "black", face = "bold.italic"),
+    axis.text = element_text(size = 12),
+    axis.title = element_text(size = 16),
+    axis.text.x = element_text(angle = -90, hjust = 0),
+    legend.position = "none",
+    panel.background = element_blank(),
+    panel.grid.major.y = element_line(colour = "black", linetype = "dashed", size = 0.1)) +
+  scale_color_viridis_d() +
+  scale_fill_viridis_d()
+```
+
+![](20200107_files/figure-gfm/unnamed-chunk-1-1.png)<!-- -->
